[package]
name = "txt_by_clmn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_info = { version = "3", default-features = false }

log = "0.4.20"
num_cpus = {version = "1.16.0"}

ansi_term = "0.12"
termion = "*"

chrono = "0.4"
datetime = "0.5.2"

serde_json = {version="1.0.99"}
serde = {version="1.0.99", features=["derive"]}
